--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -76,17 +76,19 @@
                 <a href="/tour" class="header-a" style="text-decoration:none"><b>Tour du lịch</b></a>
             </div>
             <div class="header-a">
-                <a href="#" class="header-a" style="text-decoration:none; margin-left: 250px;">hợp tác cùng chúng tôi</a>
+                <a href="/signup" class="header-a" style="text-decoration:none; margin-left: 250px;">hợp tác cùng chúng tôi</a>
             </div>
             <div class="header-p">
                 <p class="header-p">0967648120</p>
             </div>
             <div >
-                <a href=""><i class="fa fa-bell" aria-hidden="true" style="font-size: 20px; padding: 10px; padding-top:25px; color: #000;"></i></a>
+                <a href="/notification"><i class="fa fa-bell" aria-hidden="true" style="font-size: 20px; padding: 10px; padding-top:25px; color: #000;"></i></a>
             </div>
             <div style="padding: 20px;">
+              <a href="/user">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF9euRlTk0WqLnPH_yl_3_jyxf379PvEpJ_Q&usqp=CAU" alt="" width="30px; height: 30px;">
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
+              </a>  
             </div>
         </div>
     </div>
@@ -100,13 +102,13 @@
 
     <div style="display: flex;  padding-left: 10%; padding-top: 20px;">
         <div style="width: 20%; ">
-            <center><p class="p-title">Quản lý tài khoản</p></center>
+            <center><a href="/user" style="text-decoration: none;"><p class="p-title">Quản lý tài khoản</p></a></center>
         </div>
         <div style="width: 20%;">
-            <center><p class="p-title">Thông báo</p></center>
+            <center><a href="/notification" style="text-decoration: none;"><p class="p-title">Thông báo</p></a></center>
         </div>
         <div style="width: 20%; color: rgb(63, 147, 216);">
-            <center><p class="p-title" style="border-bottom: solid 2px;">Giỏ hàng</p></center>
+            <center><a href="/cart" style="text-decoration: none;"><p class="p-title" style="border-bottom: solid 2px;">Giỏ hàng</p></a></center>
         </div>
     </div>
 
