--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -85,17 +85,20 @@
                 <a href="/tour" class="header-a" style="text-decoration:none">Tour du lịch</a>
             </div>
             <div class="header-a">
-                <a href="#" class="header-a" style="text-decoration:none; margin-left: 250px;">hợp tác cùng chúng tôi</a>
+                <a href="/signup" class="header-a" style="text-decoration:none; margin-left: 250px;">hợp tác cùng chúng tôi</a>
             </div>
             <div class="header-p">
                 <p class="header-p">0967648120</p>
             </div>
             <div >
-                <a href=""><i class="fa fa-bell" aria-hidden="true" style="color: white; font-size: 20px; padding: 10px; padding-top:25px;"></i></a>
+                <a href="/notification"><i class="fa fa-bell" aria-hidden="true" style="color: white; font-size: 20px; padding: 10px; padding-top:25px;"></i></a>
             </div>
             <div style="padding: 20px;">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF9euRlTk0WqLnPH_yl_3_jyxf379PvEpJ_Q&usqp=CAU" alt="" width="30px; height: 30px;">
+                <a href="/user">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF9euRlTk0WqLnPH_yl_3_jyxf379PvEpJ_Q&usqp=CAU" alt="" width="30px; height: 30px;">
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
+                </a>
+                
             </div>
         </div>
     </div>
