--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,11 @@
     <title>Document</title>
     <style>
         .div1{
-            width:70vw; 
-            height:70vh;
+            width:80vw; 
+            height:80vh;
             background-color: white;
-            margin: 10%;
             display: flex;
-            margin-left: 200px;
+            margin: 10%;
         }
         .div-img{
             width: 50%;
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body style="background-color: rgb(172, 202, 226);">
-    
+        
         <div class="div1">
             <div class="div-img">
                 <img src="https://nhatminhdecor.com/wp-content/uploads/2018/11/la-cay-trang-tri-chup-anh-2.jpg?v=1620904108" alt="" width="100%" height="100%">
@@ -75,17 +75,17 @@
             <div class="div-text">
                 <br>
                 <center><span class="p-title">login with </span><span class="p-title">TVIEW</span></center>
-
+                <center><p th:if="${loginFalse}" style="color:red;">Sai tài khoản hoặc mật khẩu</p></center>
                 <div style="margin-top: 100px; padding-left: 50px;">
-                    <form action="">
-                        <label for="" class="label-form">UserName:</label>
+                    <form action="/login" method="post">
+                        <label class="label-form">UserName:</label>
                         <br>
-                        <input class="input1" type="text">
+                        <input class="input1" type="text" name="user_name">
                         <br>
                         <br>
-                        <label for="" class="label-form">Password:</label>
+                        <label class="label-form">Password:</label>
                         <br>
-                        <input class="input1" type="password">
+                        <input class="input1" type="password" name="password">
                         <br>
                         <br>
                         <input type="checkbox"><span style="font-size: 20px;">remember Me</span>
@@ -107,7 +107,7 @@
                     </div>
 
                     <div style="width:30%;">
-                        <a href="">Sign up</a>
+                        <a href="/signup">Sign up</a>
                     </div>
                 </div>
             </div>
