--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -63,6 +63,25 @@
           border-top-left-radius: 50%;
           border-bottom-left-radius: 50%;  
           border-bottom-right-radius: 50%;
+          margin-top: 20%;
+        }
+
+        .input{
+          width: 500px;
+          border-radius: 5px;
+          font-size: 20px;
+          background-color: rgb(189, 213, 214);
+          border: none;
+        }
+
+        .btn-update{
+          color: white;
+          background-color:rgb(52, 110, 199) ;
+          font-size: 20px;
+          padding: 3px;
+          border: none;
+          border-radius: 5px;
+          margin-left: 200px;
         }
 
 
@@ -83,17 +102,19 @@
                 <a href="/tour" class="header-a" style="text-decoration:none"><b>Tour du lịch</b></a>
             </div>
             <div class="header-a">
-                <a href="#" class="header-a" style="text-decoration:none; margin-left: 250px;">hợp tác cùng chúng tôi</a>
+                <a href="/signup" class="header-a" style="text-decoration:none; margin-left: 250px;">hợp tác cùng chúng tôi</a>
             </div>
             <div class="header-p">
                 <p class="header-p">0967648120</p>
             </div>
             <div >
-                <a href=""><i class="fa fa-bell" aria-hidden="true" style="font-size: 20px; padding: 10px; padding-top:25px; color: #000;"></i></a>
+                <a href="/notification"><i class="fa fa-bell" aria-hidden="true" style="font-size: 20px; padding: 10px; padding-top:25px; color: #000;"></i></a>
             </div>
             <div style="padding: 20px;">
+              <a href="/user">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF9euRlTk0WqLnPH_yl_3_jyxf379PvEpJ_Q&usqp=CAU" alt="" width="30px; height: 30px;">
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
+              </a>
             </div>
         </div>
     </div>
@@ -108,43 +129,48 @@
 
     <div style="display: flex;  padding-left: 10%; padding-top: 20px;">
         <div style="width: 20%; color: rgb(63, 147, 216);">
-            <center><p class="p-title" style="border-bottom: solid 2px;">Quản lý tài khoản</p></center>
+            <center><a href="/user" style="text-decoration: none;"><p class="p-title" style="border-bottom: solid 2px;">Quản lý tài khoản</p></a></center>
         </div>
         <div style="width: 20%">
-            <center><p class="p-title">Thông báo</p></center>
+            <center><a href="/notification" style="text-decoration: none;"><p class="p-title">Thông báo</p></a></center>
         </div>
         <div style="width: 20%">
-            <center><p class="p-title">Giỏ hàng</p></center>
+            <center><a href="/cart" style="text-decoration: none;"><p class="p-title">Giỏ hàng</p></a></center>
         </div>
     </div>
 
-    <div style="display: flex; margin-left: 10%; background-color: rgb(241, 238, 233);">
+    <div style="display: flex; margin-left:3%; background-color: rgb(241, 238, 233); width: 94%;">
         <div style="width: 20%;">
-            <img src="" class="img-tron" alt="" width="150px" height="150px">
+          <center><img th:attr="src=${user.getImg()}" class="img-tron" alt="" width="150px" height="150px"></center>    
         </div>
         <div>
-            <form action="">
-                <label for="">Họ tên</label>
+            <form autocomplete="off" action="#" th:action="@{/user}"
+            th:object="${user}" method="post"
+            role="form">
+                <label >Họ tên</label>
                 <br>
-                <input type="text">
+                <input class="input" th:field="*{name}" type="text">
+                <input th:field="*{id}" type="text" hidden>
                 <br>
-                <label for="">Email</label>
+                <label >Email</label>
                 <br>
-                <input type="text">
+                <input class="input" th:field="*{email}" type="text">
                 <br>
-                <label for="">Địa chỉ</label>
+                <label >Địa chỉ</label>
                 <br>
-                <input type="text">
+                <input class="input" th:field="*{address}" type="text">
                 <br>
-                <label for="">Số điện thoại</label>
+                <label >Số điện thoại</label>
                 <br>
-                <input type="text">
+                <input class="input" th:field="*{phone}" type="text">
                 <br><br>
-                <input type="submit" value="submit">
+                <input class="btn-update" type="submit" value="Cập nhật">
             </form>
         </div>
 
     </div>
+
+    <br><br><br><br>
 
     <footer class="footer-59391" style="background-color: rgb(132, 230, 243); margin-left: 3%; margin-right: 3%;">
       
