--- a/src/main/resources/templates/tem.html
+++ b/src/main/resources/templates/tem.html
@@ -63,7 +63,7 @@
         <br>
         <div style="display: flex;">
             <div>
-                <h3 class="header-logo">TVIEW</h3>
+              <a href="/home" style="text-decoration: none;"><h3 class="header-logo">TVIEW</h3></a>
             </div>
             <div class="header-a">
                 <a href="/hotel" class="header-a" style="text-decoration:none"><b>Khách sạn</b></a>
@@ -142,6 +142,8 @@
         
       </div>
     </footer>
+
+     <!-- Embed the HTMEditor --> <textarea id="htmeditor"></textarea> <script src="https://htmeditor.com/js/htmeditor.min.js"      htmeditor_textarea="htmeditor"      full_screen="yes"      editor_height="480"     run_local="no"> </script> 
 
     <!--js footer-->
     <script src="javascript/footer/jquery-3.3.1.min.js"></script>
