--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,18 +2,28 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta charset="UTF-8">
-    <title>Home</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/footer/bootstrap.min.css">
+    <link rel="stylesheet" href="css/footer/style-fonts.min.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="css/footer/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet">
+    <title>HOME</title>
     <style>
         .header{
             background-image: url('https://ezcloud.vn/wp-content/uploads/2019/07/1533966485504_8785368-1.jpg');
-            width: 100%; 
-            height: 500px; 
+            width: 100%;
+            height: 500px;
             background-size: 100% 100%;
         }
 
@@ -41,7 +51,7 @@
             color: white;
             font-size: 20px;
             padding: 9px;
-            
+
         }
 
         .main-title{
@@ -76,7 +86,7 @@
         <br>
         <div style="display: flex;">
             <div>
-                <h3 class="header-logo">TVIEW</h3>
+                <a href="/home" style="text-decoration: none;"><h3 class="header-logo">TVIEW</h3></a>
             </div>
             <div class="header-a">
                 <a href="/hotel" class="header-a" style="text-decoration:none">Khách sạn</a>
@@ -98,23 +108,25 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF9euRlTk0WqLnPH_yl_3_jyxf379PvEpJ_Q&usqp=CAU" alt="" width="30px; height: 30px;">
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
                 </a>
-                
+
             </div>
         </div>
     </div>
-    
-    
+
+
     <div class="main">
         <h1 class="main-title">Khách sạn giá tốt chỉ có trên Tview</h1>
         <a href="" style="text-decoration: none;">&lt&lt Xem tất cả &gt&gt</a>
         <div  th:each="hotel : ${hotels}">
-            <div class="card">
-                <img th:attr="src=${hotel.getAvatar()}" alt="anh" width="250px" height="200px">
-                <p class="card-p" style="margin-top: 20px;"><b th:text="${hotel.getName()}">Tên khách sạn</b></p>
-                <p th:text="${hotel.getCity().getName()}" class="card-p">city</p>
-                <p th:text="${hotel.getStar()}" class="card-p">sao</p>
-                <p th:text="${hotel.getCost()}" class="card-p" style="color: hotpink;">10000000</p>
-            </div>
+            <a th:href="@{/hotel-id(id=${hotel.getId()})}">
+                <div class="card">
+                    <img th:attr="src=${hotel.getAvatar()}" alt="anh" width="250px" height="200px">
+                    <p class="card-p" style="margin-top: 20px;"><b th:text="${hotel.getName()}">Tên khách sạn</b></p>
+                    <p th:text="${hotel.getCity().getName()}" class="card-p">city</p>
+                    <p th:text="${hotel.getStar()}" class="card-p">sao</p>
+                    <p th:text="${hotel.getCost()}" class="card-p" style="color: hotpink;">10000000</p>
+                </div>
+            </a>
         </div>
     </div>
 
@@ -124,7 +136,62 @@
         <p>Đang phát triển</p>
     </div>
 
+    <br><br><br><br>
+    <footer class="footer-59391" style="background-color: rgb(132, 230, 243); margin-left: 3%; margin-right: 3%;">
+      
+        <div class="container">
+
+          
+          <div class="row mb-5">
+            <div class="col-md-4">
+              <div class="site-logo">
+                <a href="#">TVIEW</a>
+              </div>
+            </div>
+            <div class="col-md-8 text-md-right">
+              <ul class="list-unstyled social-icons">
+                <li><a href="#" class="fb"><span class="icon-facebook"></span></a></li>
+                <li><a href="#" class="tw"><span class="icon-twitter"></span></a></li>
+                <li><a href="#" class="in"><span class="icon-instagram"></span></a></li>
+                <li><a href="#" class="be"><span class="icon-behance"></span></a></li>
+                <li><a href="#" class="dr"><span class="icon-dribbble"></span></a></li>
+                <li><a href="#" class="yt"><span class="icon-play"></span></a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="row mb-5">
+            <div class="col-md-6 ">
+              <ul class="nav-links list-unstyled nav-left">
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Policy</a></li>
+              </ul>
+            </div>
+            <div class="col-md-6 text-md-right">
+              <ul class="nav-links list-unstyled nav-right">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Our works</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col ">
+              <div class="copyright">
+                <p><small>Copyright 2019. All Rights Reserved.</small></p>
+              </div>
+            </div>
+          </div>
+        
+      </div>
+    </footer>
 
 
+    <!--js footer-->
+    <script src="javascript/footer/jquery-3.3.1.min.js"></script>
+    <script src="javascript/footer/popper.min.js"></script>
+    <script src="javascript/footer/bootstrap.min.js"></script>
 </body>
 </html>
