--- a/src/main/resources/templates/hotel.html
+++ b/src/main/resources/templates/hotel.html
@@ -110,6 +110,7 @@
           border-radius: 5px;
           padding: 5px;
           margin-left: 200px;
+      
         }
 
     </style>
@@ -120,7 +121,7 @@
         <br>
         <div style="display: flex;">
             <div>
-                <h3 class="header-logo">TVIEW</h3>
+              <a href="/home" style="text-decoration: none;"><h3 class="header-logo">TVIEW</h3></a>
             </div>
             <div class="header-a">
                 <a href="/hotel" class="header-a" style="text-decoration:none"><b>Khách sạn</b></a>
@@ -198,23 +199,26 @@
       </div>
     </div>
 
-
     <div class="main">
       <h1 class="main-title">Khách sạn giá tốt chỉ có trên Tview</h1>
       <a href="" style="text-decoration: none;">&lt&lt Xem tất cả &gt&gt</a>
-      <div  th:each="hotel : ${hotels}">
-        <a th:href="@{/hotel-id(id=${hotel.getId()})}" style="text-decoration: none;">
-          <div class="card">
-            <img th:attr="src=${hotel.getAvatar()}" alt="anh" width="250px" height="200px">
-            <p class="card-p" style="margin-top: 20px;"><b th:text="${hotel.getName()}">Tên khách sạn</b></p>
-            <p th:text="${hotel.getCity().getName()}" class="card-p">city</p>
-            <p th:text="${hotel.getStar()}" class="card-p">sao</p>
-            <p th:text="${hotel.getCost()}" class="card-p" style="color: hotpink;">10000000</p>
-          </div>
-        </a>  
+      <hr>
+      <div style="">
+        <div th:each="hotel : ${hotels}" style="width: 250px; height: 350px; margin: 10px; display: inline-block;">
+          <a th:href="@{/hotel-id(id=${hotel.getId()})}" style="text-decoration: none;">
+            <div class="card">
+              <img th:attr="src=${hotel.getAvatar()}" style="width: 250px; height: 150px;">
+              <p class="card-p" style="margin-top: 20px;"><b th:text="${hotel.getName()}">Tên khách sạn</b></p>
+              <p th:text="${hotel.getCity().getName()}" class="card-p">city</p>
+              <p  class="card-p"><span th:text="${hotel.getStar()}"></span><span> Sao</span></p>
+              <p class="card-p" style="color: hotpink;"><span th:text="${hotel.getCost()}"></span> Đ/Đêm</p>
+            </div>
+          </a>
+          
+        </div>
       </div>
-  </div>
-
+    </div>
+    
   <div>
     <p style="font-size: 30px;  margin-left: 150px; color: rgb(19, 94, 206);"><b>Các khách sạn hàng đầu</b></p>
     
